SONAR-15825 Escape special characters in like sql query for portfolio projects